--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "moment": "^2.22.2",
     "ngx-quill": "^4.0.0",
+    "npm": "^6.5.0",
     "quill": "^1.3.6",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
